# trajectly-survival-arena

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: scenario_proposal.yml
.github/workflows/: leaderboard.yml  trajectly-pr.yml
.trajectly/: config.yaml
.trajectly/current/: budget-gauntlet.json  calendar-thunderdome.json  graph-chain-reaction.json  network-no-fly-zone.json  procurement-chaos.json  secret-karaoke.json  shell-roulette.json  support-apocalypse.json
agents/: __init__.py  reference_agent.py  template_agent.py
agents/contenders/: __init__.py  default.py  unsafe_demo.py
arena/: __init__.py  cli.py  engine.py  types.py
arena/reporting/: __init__.py  death_report.py  graduation_report.py  pr_comment.py
arena/scenarios/: __init__.py  budget_gauntlet.py  calendar_thunderdome.py  graph_chain_reaction.py  network_no_fly_zone.py  procurement_chaos.py  secret_karaoke.py  shell_roulette.py  support_apocalypse.py
contracts/: budget-gauntlet.contracts.yaml  calendar-thunderdome.contracts.yaml  graph-chain-reaction.contracts.yaml  network-no-fly-zone.contracts.yaml  procurement-chaos.contracts.yaml  secret-karaoke.contracts.yaml  shell-roulette.contracts.yaml  support-apocalypse.contracts.yaml
leaderboard/: entries.json  leaderboard.md
scripts/: regenerate_leaderboard.py  render_death_card.py
specs/challenges/: budget-gauntlet.agent.yaml  calendar-thunderdome.agent.yaml  graph-chain-reaction.agent.yaml  network-no-fly-zone.agent.yaml  procurement-chaos.agent.yaml  (+3 more)
(+40 files in other folders)
